<resources>
    <string name="app_name">MY Loan-App</string>
    ------ ************* (MAIN / DETAILS)ACTIVITY ************* ------
    <string name="welcome"><b>Welcome </b></string>
    <string name="details"><b>Add Details </b></string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="policy">By creating an account you agree to our Terms of Service and Privacy Policy.</string>
    <string name="google_sign">Sign in With Google</string>/>
    <string name="default_web_client_id" translatable="false">692630145160-5ub4m22g5te3s6vrd11t4314d8vpj1pv.apps.googleusercontent.com</string>
    <string name="UserName">Name</string>
    <string name="UserLastName">Last Name</string>
    <string name="UserPhoneNumber">Number</string>
    <string name="UserEmailID">E-mail ID</string>
    <string name="UserPinCode">Pin Code</string>
    ------ ************* LOAN AMOUNT ACTIVITY ************* ------
    <string name="Loan">Enter Your Required Loan Amount!</string>
    <string name="loan_amount">Loan Amount</string>
    ------ ************* DOB ACTIVITY ************* ------
    <string name="DOB">Select Your Date Of Birth</string>
    <string name="back">Take Me Back</string>
    <string name="next">Next</string>
    ------ ************* GENDER ACTIVITY ************* ------
    <string name="gender">Select Your Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    ------ ************* PROFESSION ACTIVITY ************* ------
    <string name="profession">Select Your Profession</string>
    <string name="salaried"><b>* Salaried</b></string>
    <string name="sub_salaried"> Receiving monthly income from a job</string>
    <string name="employed"><b>* Self-Employed Business or MSME </b></string>
    <string name="sub_employed"> Business with a valid GST certificate</string>
    <string name="selfEmployed"><b>* Self-Employed Professional</b></string>
    <string name="sub_selfEmployed"> Eg. Consultant street vendor,freelancer agent practitioner,etc.</string>
    <string name="student"><b>* Student</b></string>
    <string name="sub_student"> Student from an accredited university  or college.</string>
    ------ ************* INCOME ACTIVITY ************* ------
    <string name="IncomeNO"><b>No Monthly Income</b></string>
    <string name="IncomeLess"><b>Income Less Than 10000</b></string>
    <string name="IncomeMiddle"><b>10000–15000</b></string>
    <string name="IncomeAbove"><b>15000 &amp;Above</b></string>
    ------ ************* PanCard ACTIVITY ************* ------
    <string name="PanCard"><b>you are at a final step your loan application</b></string>
    <string name="panCard_Number">PAN-CARD Number</string>
    <string name="btnSubmit">Submit &amp;Generate Offer</string>
    <string name="btnSkip">Skip</string>
    <string name="income">Select Your Income</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log-Out</string>
    ------ ************* Home ACTIVITY ************* ------
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="birth_date">Date of Birth</string>
    <string name="genderP">Gender</string>
    <string name="professionP">Profession</string>
    <string name="incomeP">Monthly Income</string>
    <string name="btnSubmitP">Submit</string>
</resources>