<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_of_activity"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/_4sdp"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_userInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/UserName"
                app:endIconDrawable="@drawable/right"
                app:endIconMode="custom"
                app:endIconTint="@null"
                android:textColorHint="@color/strokeColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_UserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_userInputLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/UserLastName"
                app:endIconDrawable="@drawable/right"
                app:endIconMode="custom"
                app:endIconTint="@null"
                android:textColorHint="@color/strokeColor"
                app:boxStrokeColor="@color/strokeColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_UserLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_UserInputNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/UserPhoneNumber"
                app:endIconDrawable="@drawable/right"
                app:endIconMode="custom"
                app:endIconTint="@null"
                android:textColorHint="@color/strokeColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/UserPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/send_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="end"
                android:text="@string/send_otp"
                android:textColor="@color/red"
                android:textSize="@dimen/_14sdp" />


            <com.otpview.OTPTextView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/black"
                app:box_margin="6dp"
                app:height="45dp"
                app:hide_otp="false"
                app:hide_otp_drawable="@drawable/bg_otp_box_hide"
                app:length="6"
                app:otp=""
                app:otp_box_background="@drawable/bg_otp_box"
                app:otp_box_background_active="@drawable/bg_otp_box_active"
                app:otp_box_background_error="@drawable/bg_otp_box_error"
                app:otp_box_background_inactive="@drawable/bg_otp_box_inactive"
                app:otp_box_background_success="@drawable/bg_otp_box_success"
                app:otp_text_size="20sp"
                app:width="40dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_UserVerify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:backgroundTint="#0F4C75"
                android:paddingHorizontal="@dimen/_15sdp"
                android:text="@string/verify_otp"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/_5sdp" />
        </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/check_policy"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_12sdp">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:src="@drawable/google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/google_sign"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <CheckBox
        android:id="@+id/check_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:checked="true"
        android:text="@string/policy"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:theme="@style/MyCheckBox" />


</RelativeLayout>